--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,1 +1,71 @@
 @charset "UTF-8";
+
+#wrap{width: 1200px; height: 1000px; margin: auto;}
+a {text-decoration: none; color: #000;}
+a:hover {text-decoration: none; color:#000;}
+
+header {height: 80px;}
+header > .bar {height: 80px; background-color: #f0f0f0;}
+
+.logo {
+	font-family: 'Multicolore', cursive;
+	font-size:40px;
+	
+	background: rgb(238,174,202);
+	background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+	color: transparent;
+
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+.logo:hover {
+	
+	background: rgb(238,174,202);
+	background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    color: transparent;
+    
+    background-clip: text;
+    -webkit-background-clip: text;
+    
+    transform: rotate(10deg);
+}
+
+.logo_bk {
+	font-family: 'Multicolore', cursive;
+	
+	background: rgb(62, 63, 64);
+	color: transparent;
+
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+
+header .logo {width: 300px; height: 100px;}
+header .login-info{width: 900px; height: 100px;}
+
+
+.login-box{width: 450px; height: 240px; border-radius: 2px; box-shadow: rgba(0,0,0,0.227451) 3px 3px 8px 0px; background-color: rgb(250, 250, 250);}
+.mark-id{width: 40px; height: 40px; background-color: rgb(237,237,237);}
+.mark-pw{width: 40px; height: 40px; background-color: rgb(237,237,237);}
+
+.sign-up-box{width: 450px; height: 400px; border-radius: 2px; box-shadow: rgba(0,0,0,0.227451) 3px 3px 8px 0px; background-color: rgb(250, 250, 250);}
+.sign-up-subject {margin:20px; font-weight:bold;}
+.logOutBtn{border-radius: 10%; border: 1px solid silver;}
+
+#category-box{width:900px;}
+.contents{height: 500px;}
+.categories{width:740px; margin: auto;}
+
+.post-box{width: 392px; height: 180px; 	border: 2px solid #E7E9EC;}
+textarea {
+    border: none;
+    background-color: transparent;
+    resize: none;
+    outline: none;
+}
+#uploadBtn{width: 60px; height: 35px;}
+
+
+.feed-box{width: 392px;}
+footer{height: 100px;}
