좋아요, 댓글 삽입/삭제 구현

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -72,6 +72,6 @@ textarea {
 }
 #uploadBtn{width: 60px; height: 35px;}
 
-
+#commentBtn{background-color: #808080}
 .feed-box{width: 392px;}
 footer{height: 100px;}
