--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -71,7 +71,9 @@ textarea {
     outline: none;
 }
 #uploadBtn{width: 60px; height: 35px;}
+.moreDetailBtn{width: 100px; height: 150px; border: 1px solid silver; text-align: center;}
 
-#commentBtn{background-color: #808080}
+
+#commentBtn{background-color: #808080;}
 .feed-box{width: 392px;}
 footer{height: 100px;}
