--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 
-#wrap{width: 1200px; height: 1000px; margin: auto;}
+#wrap{width: 1200px; height: auto;  min-height: 900px; margin: auto;}
 a {text-decoration: none; color: #000;}
 a:hover {text-decoration: none; color:#000;}
 
 header {height: 80px;}
-header > .bar {height: 80px; background-color: #f0f0f0;}
+header > .bar {height: 80px; background-color: white;}
 
 .logo {
 	font-family: 'Multicolore', cursive;
@@ -46,45 +46,130 @@ header .login-info{width: 900px; height: 100px;}
 
 
 .login-box{width: 450px; height: 240px; border-radius: 2px; box-shadow: rgba(0,0,0,0.227451) 3px 3px 8px 0px; background-color: rgb(250, 250, 250);}
-.mark-id{width: 40px; height: 40px; background-color: rgb(237,237,237);}
-.mark-pw{width: 40px; height: 40px; background-color: rgb(237,237,237);}
+.mark {
+  background-color: rgb(237,237,237);
+  width: 50px;
+  height: 40px;
+  font-size: 14px;
+}
 
 .sign-up-box{width: 450px; height: 400px; border-radius: 2px; box-shadow: rgba(0,0,0,0.227451) 3px 3px 8px 0px; background-color: rgb(250, 250, 250);}
 .sign-up-subject {margin:20px; font-weight:bold;}
 .logOutBtn{border-radius: 10%; border: 1px solid silver;}
 
-#category-box{width:900px;}
+#category-box{width:800px; min-height: 640px; height: auto;}
+#mission-box{width:800px; min-height: 580px; height: auto;}
 .contents{height: 500px;}
 .categories{width:740px; margin: auto;}
 
 
 .missionPage{margin: auto;}
-#missionBar{width: 300px;}
 #missionTimeline{width: 500px;}
 
+.joinBtn{
+  background-color: #458ade;
+  width: 160px;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px .8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+}
 
-.post-box{width: 392px; height: 180px; 	border: 1px solid  silver; border-radius: 2%;}
+.joinBtn:hover,
+.joinBtn:focus {
+  background-color: #3e7cc7;
+}
+
+.joinBtn:focus {
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+}
+
+.joinBtn:active {
+  background-color: #3e7cc7;
+  box-shadow: none;
+}
+
+.joinOutBtn{
+  background-color: #f24b4b;
+  width: 160px;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px .8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+}
+
+.joinOutBtn:hover,
+.joinOutBtn:focus {
+  background-color: #d93f3f;
+}
+
+.joinOutBtn:focus {
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+}
+
+.joinOutBtn:active {
+  background-color: #d93f3f;
+  box-shadow: none;
+}
+
+#missionBar{width: 260px; min-height: 300px; max-height: 320px; background-color:white; border-radius: 2px;}
+.post-box{width: 540px; height: 180px; 	background-color: white}
 textarea {
     border: none;
     background-color: transparent;
     resize: none;
     outline: none;
 }
+
+.feed-box{width: 540px; height: auto;}
+
 #uploadBtn{width: 60px; height: 35px;}
 .moreDetailBtn{width: 100px; height: 150px; border: 1px solid silver; text-align: center;}
 
 
 #commentBtn{background-color: #808080;}
 
-
-.myPage{width: 1000px; margin: auto;}
-#myPageBar{width: 150px;}
-#myPageView{width: 700px;}
+.myPage{width: 1000px; height: auto; margin: auto;}
+#myPageBar{width: 200px; height: 260px;}
+#myPageView{width: 700px; height: auto; min-height: 500px;}
 
 .menu-text{color:#303030; font-size: 14px;}
 .menu-text:hover{text-decoration:none; color:#303030; font-weight: bold;}
 .nav-item{height: 30px;}
 .nav-item:hover{background-color: #e6e4e1;}
 
-.feed-box{width: 392px;}
 footer{height: 100px;}
