--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -44,6 +44,30 @@ header > .bar {height: 80px; background-color: white;}
 header .logo {width: 300px; height: 100px;}
 header .login-info{width: 900px; height: 100px;}
 
+header .logInOutBtn {
+  appearance: none;
+  background-color: #FAFBFC;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
+  box-sizing: border-box;
+  color: #24292E;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  padding: 6px 16px;
+  position: relative;
+  transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  word-wrap: break-word;
+}
 
 .login-box{width: 450px; height: 240px; border-radius: 2px; box-shadow: rgba(0,0,0,0.227451) 3px 3px 8px 0px; background-color: rgb(250, 250, 250);}
 .mark {
@@ -55,7 +79,6 @@ header .login-info{width: 900px; height: 100px;}
 
 .sign-up-box{width: 450px; height: 400px; border-radius: 2px; box-shadow: rgba(0,0,0,0.227451) 3px 3px 8px 0px; background-color: rgb(250, 250, 250);}
 .sign-up-subject {margin:20px; font-weight:bold;}
-.logOutBtn{border-radius: 10%; border: 1px solid silver;}
 
 #category-box{width:800px; min-height: 640px; height: auto;}
 #mission-box{width:800px; min-height: 580px; height: auto;}
