--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -195,4 +195,64 @@ textarea {
 .nav-item{height: 30px;}
 .nav-item:hover{background-color: #e6e4e1;}
 
+.checkBtn1 {
+  appearance: button;
+  background-color: #458ade;
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, .15), rgba(255, 255, 255, 0));
+  border: 1px solid #458ade;
+  border-radius: 0.5rem;
+  box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset,rgba(46, 54, 80, 0.075) 0 1px 1px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Inter,sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.5;
+  margin: 0;
+  padding: .5rem 1rem;
+  text-align: center;
+  text-transform: none;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
+.checkBtn1:focus:not(:focus-visible),
+.checkBtn1:focus {
+  outline: 0;
+}
+
+.checkBtn1:hover {
+  background-color: #356eb5;
+  border-color: #356eb5;
+}
+
+.checkBtn1:focus {
+  background-color: #356eb5;
+  border-color: #356eb5;
+  box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset, rgba(46, 54, 80, 0.075) 0 1px 1px, rgba(104, 101, 235, 0.5) 0 0 0 .2rem;
+}
+
+.checkBtn1:active {
+  background-color: #356eb5;
+  background-image: none;
+  border-color: #356eb5;
+  box-shadow: rgba(46, 54, 80, 0.125) 0 3px 5px inset;
+}
+
+.checkBtn1:active:focus {
+  box-shadow: rgba(46, 54, 80, 0.125) 0 3px 5px inset, rgba(104, 101, 235, 0.5) 0 0 0 .2rem;
+}
+
+.checkBtn1:disabled {
+  background-image: none;
+  box-shadow: none;
+  opacity: .65;
+  pointer-events: none;
+}
+
 footer{height: 100px;}
