--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -169,7 +169,34 @@ header .logInOutBtn {
   box-shadow: none;
 }
 
-#missionBar{width: 260px; min-height: 300px; max-height: 320px; background-color:white; border-radius: 2px;}
+#missionBar{width: 260px; min-height: 320px; max-height: 360px; background-color:white; border-radius: 2px;}
+.closedMission{
+  background-color: #787a79;
+  width: 160px;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px .8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+}
+
+
 .post-box{width: 540px; height: 180px; 	background-color: white}
 textarea {
     border: none;
